# Amazing_huntingV2_0

./: db.sqlite3  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
amazing_hunting/: settings.py  urls.py
data/: csv_to_json.py
