[tool.poetry]
name = "amazing-hunting"
version = "0.1.0"
description = ""
authors = ["ArtemShadrin <artemshadrinprogramming@gmail.com>"]
readme = "README.md"
packages = [{include = "amazing_hunting"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
